kube/v1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: knginx
  labels:
    app: knginx
spec: 
  selector: 
    app: knginx
  type: NodePort
  ports: 
    - port: 80
      targetPort: 80
      nodePort: 30001
